Fix wrong service links and add HTTP version in readme

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import '../styles/style.css';
             </p>
             <ul>
                 {config.services.map((service) => (
-                    <li><a href={`${config.domain}/${service.slug}`}>{service.name}</a></li>
+                    <li><a href={`https://${config.domain}/${service.slug}`}>{service.name}</a></li>
                 ))}
             </ul>
         </section>
