--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,13 +10,13 @@ import '../styles/style.css';
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Redirector</title>
+        <title>Shortener</title>
         <script is:inline>
             const setCookie = (location) => { document.cookie = `loc=${location}`; }
         </script>
     </head>
     <body>
-        <h1><prlgm><span>Redirector</span></prlgm></h1>
+        <h1><prlgm><span>Shortener</span></prlgm></h1>
         <section>
             <p>
                 This is a beta build. Things are still generally unpolished.
@@ -25,7 +25,7 @@ import '../styles/style.css';
                 This service uses cookies. By setting a location, you explicitly agree to the use of these.
                 These are only used for redirection.
             </p>
-            <a href="https://github.com/ggtylerr/redirector">Source code</a>
+            <a href="https://github.com/ggtylerr/shortener">Source code</a>
         </section>
         <h2><prlgm><span>Locations</span></prlgm></h2>
         <section>
